# tg-wolfram-alpha-bot

./: .gitignore  Cargo.toml
src/: http_service.rs  main.rs  telegram.rs  test_util.rs  util.rs  wolfram.rs
test-util/: Cargo.toml
test-util/src/: lib.rs
tg/: Cargo.toml
tg/src/: http_service.rs  lib.rs  telegram.rs
