[package]
name = "wolfram_alpha_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
http = "0.2.9"
itertools = "0.10"
once_cell = "1"
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2"
tracing-subscriber = "0.3.16"

[dependencies.tower]
version = "0.4"
features = ["full"]

[dev-dependencies]
regex = {version = "1", features = ["unicode-case"]}
tower-test = "0.4"
tracing-test = "0.1"
