[workspace]
members = ["test-util", "tg"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytes = "1"
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
http = "0.2.9"
once_cell = "1"
pin-project = "1.0.12"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
thiserror = "1.0.40"
tokio = "1"
tower = "0.4"
tower-test = "0.4"
tracing = "0.1.37"
tracing-error = "0.2"
tracing-subscriber = "0.3.16"

[package]
name = "wolfram_alpha_bot"
version.workspace = true
edition.workspace = true

[dependencies]
tg-lib = { path = "tg" }

bytes.workspace = true
color-eyre.workspace = true
eyre.workspace = true
futures.workspace = true
http.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

[dependencies.tokio]
workspace = true
features = ["macros", "rt"]

[dependencies.tracing-futures]
version = "0.2.5"
features = ["futures-03"]

[dev-dependencies]
test-util = { path = "test-util" }

tower-test.workspace = true
